# mint-ladder-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.cursor/: settings.json
config/: burner_wallets.yaml
docs/: ARCHITECTURE.md  SNIPER_IMPLEMENTATION_SPEC.md  SNIPER_PHASE1C_AUDIT_REPORT.md
mint_ladder_bot/: __main__.py  backfill_engine.py  backfill_rpc.py  bag_zero_reason.py  config.py  dashboard_server.py  dashboard_truth.py  deep_history_scan.py  events.py  execution_engine.py  health.py  history_checkpoint.py  jupiter.py  lane_manager.py  logging_setup.py  lot_invariants.py  main.py  mint_history_analysis.py  models.py  notifier.py  offline_rebuild.py  port_resolver.py  process_lock.py  reconciliation_compare_cli.py  reconciliation_report.py  risk_engine.py  rpc.py  runner.py  runtime_paths.py  source_gap_diagnostics.py  state.py  status_snapshot.py  strategy.py  symbol_cache.py  transfer_provenance_analysis.py  transfer_provenance_report_cli.py  transfer_provenance_scratch.py  trusted_transfer_scratch_cli.py  tx_infer.py  tx_lot_engine.py  (+3 more)
scripts/: audit_pending_lots.py  ci_dryrun.sh  clean_runtime.py  cleanup_duplicate_fallback_lots.py  clear_lots_for_rebuild.py  downgrade_display_pending_to_unknown.py  helius_probe_to_history.py  helius_tx_probe.py  migrate_sell_accounting.py  migrate_snapshot_lots.py  monitoring_summary.py  rebuild_from_chain.py  repair_lot_entry_market_fallback.py  report_tx_lookup_failures.py  resolve_display_pending_lots.py  restore_lots_from_archive.py  run_resolver_once.py  scan_wallet_txs.py  smoke_full_sniper_cycle.py  (+5 more)
(+162 files in other folders)
